--- a/client/build.gradle
+++ b/client/build.gradle
@@ -12,7 +12,7 @@ java {
 
 jar {
     manifest {
-        attributes 'Main-Class': 'com.hubsante.Dispatcher'
+        attributes 'Main-Class': 'com.hubsante.ConsumerRun'
     }
     // Building a fat jar (with dependencies) | Ref.: https://www.baeldung.com/gradle-fat-jar
     from {
