--- a/hub/dispatcher/build.gradle
+++ b/hub/dispatcher/build.gradle
@@ -39,6 +39,7 @@ dependencies {
 	implementation 'org.json:json:20220924'
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.12.5'
+	implementation 'com.networknt:json-schema-validator:1.0.72'
 	implementation 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
