add rabbitmq_auth_mechanism_ssl conf for local usage

--- a/hub/rabbitmq/rabbitmq.conf
+++ b/hub/rabbitmq/rabbitmq.conf
@@ -7,6 +7,8 @@
 ## https://www.rabbitmq.com/access-control.html#loopback-users
 ## https://www.rabbitmq.com/production-checklist.html#users
 loopback_users.guest = false
+default_user = guest
+default_pass = guest
 
 ## Send all logs to stdout/TTY. Necessary to see logs when running via
 ## a container
@@ -27,6 +29,13 @@ ssl_options.certfile   = /etc/rabbitmq/certs/hub.crt
 ssl_options.keyfile    = /etc/rabbitmq/certs/hub.key
 ssl_options.verify     = verify_peer
 ssl_options.fail_if_no_peer_cert = true
+
+# For Dashboard UI to work | # Ref.: https://cjshelton.github.io/blog/2019/12/18/rabbitmq-client-certificate-authentication.html#server-side-changes
+auth_mechanisms.1 = PLAIN
+# x509 cert Auth | Ref.: https://github.com/rabbitmq/rabbitmq-server/tree/main/deps/rabbitmq_auth_mechanism_ssl#usage
+auth_mechanisms.1 = EXTERNAL
+# Use CN | Ref.: https://github.com/rabbitmq/rabbitmq-server/tree/main/deps/rabbitmq_auth_mechanism_ssl#common-name
+ssl_cert_login_from = common_name
 
 ## Ref.: https://www.rabbitmq.com/ssl.html#tls-versions
 ssl_options.versions.1 = tlsv1.2
