--- a/hub/infra/ingress.yaml
+++ b/hub/infra/ingress.yaml
@@ -4,6 +4,7 @@ metadata:
   name: ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
+    nginx.org/tcp-services: "5671:rabbitmq"
 spec:
   rules:
     - host: rabbitmq
