--- a/hub/infra/ingress.yaml
+++ b/hub/infra/ingress.yaml
@@ -2,12 +2,11 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingress
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
+#   annotations:
+#     nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   rules:
-    - host: rabbitmq
-      http:
+    - http:
         paths:
           - path: /
             pathType: Prefix
