--- a/hub/infra/rabbitmq.yaml
+++ b/hub/infra/rabbitmq.yaml
@@ -7,6 +7,9 @@ spec:
   tls:
     secretName: tls-secret
     caSecretName: ca-secret
+  service:
+    # Exposed though Ingress | Ref.: https://www.rabbitmq.com/kubernetes/operator/using-operator.html#service-type
+    type: ClusterIP
   rabbitmq:
     # Ref.: https://www.rabbitmq.com/kubernetes/operator/using-operator.html#additional-plugins
     additionalPlugins:
