--- a/hub/infra/ingress.yaml
+++ b/hub/infra/ingress.yaml
@@ -2,13 +2,13 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingress
-#   annotations:
-#     nginx.ingress.kubernetes.io/rewrite-target: /$2
+#  annotations:
+#    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   rules:
     - http:
         paths:
-          - path: /
+          - path: /rabbitmq
             pathType: Prefix
             backend:
               service:
