--- a/client/build.gradle
+++ b/client/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation 'org.json:json:20220924'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7.1'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.12.5'
     implementation 'javax.validation:validation-api:2.0.1.Final'
     implementation 'com.networknt:json-schema-validator:1.0.79'
     implementation 'org.jetbrains:annotations:23.0.0'
@@ -39,7 +40,7 @@ dependencies {
 
 application {
     mainClassName = project.hasProperty("main") ?
-            project.getProperty("main") : 'com.hubsante.Dispatcher'
+            project.getProperty("main") : 'com.hubsante.ConsumerRun'
 }
 
 jib {
