--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ certs/CA/
 !certs/CA/rootCA.crt
 !certs/CA/hub.ext
 !certs/CA/client.ext
+certs/fr.health.hub.test*
 
 # Needed as GitHub action for AsyncAPI generation installs npm packages
 node_modules/
