--- a/hub/infra/web/ingress.yaml
+++ b/hub/infra/web/ingress.yaml
@@ -19,6 +19,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: hello-world
+                name: web-landing
                 port:
                   number: 80
