--- a/hub/infra/web/landing.yaml
+++ b/hub/infra/web/landing.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: hello-world
+  name: web-landing
   labels:
-    app: hello-world
+    app: web-landing
 spec:
   type: ClusterIP
   ports:
@@ -12,26 +12,26 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app: hello-world
+    app: web-landing
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: hello-world-deployment
+  name: web-landing-deployment
   labels:
-    app: hello-world
+    app: web-landing
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: hello-world
+      app: web-landing
   template:
     metadata:
       labels:
-        app: hello-world
+        app: web-landing
     spec:
       containers:
-        - name: hello-world
+        - name: web-landing
           image: romainfd/hub-web:latest
           ports:
             - containerPort: 80
