--- a/hub/dispatcher/build.gradle
+++ b/hub/dispatcher/build.gradle
@@ -6,6 +6,7 @@ plugins {
 }
 
 group = 'com.hubsante'
+archivesBaseName = 'hubsante-dispatcher'
 version = '0.8-SNAPSHOT'
 
 java {
@@ -33,6 +34,8 @@ ext {
 }
 
 dependencies {
+	implementation project(':models')
+
 	implementation 'org.springframework.boot:spring-boot-starter-amqp'
 	implementation 'com.github.jknack:handlebars:4.3.1'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
