handle language type

--- a/hub/dispatcher/src/main/resources/application-bbo.properties
+++ b/hub/dispatcher/src/main/resources/application-bbo.properties
@@ -2,3 +2,5 @@
 # Use: gradle bootRun --args='--spring.profiles.active=local,bbo' | Ref.: https://stackoverflow.com/a/57890208/10115198
 spring.rabbitmq.ssl.key-store=file:C:/dev/ANS/SAMU/HubSante/repository/SAMU-Hub-Sante/certs/client.p12
 spring.rabbitmq.ssl.trust-store=file:C:/dev/ANS/SAMU/HubSante/repository/SAMU-Hub-Sante/certs/truststore
+
+client.preferences.file=C:/dev/ANS/SAMU/HubSante/repository/SAMU-Hub-Sante/hub/dispatcher/src/main/jib/config/client.preferences.csv
