--- a/hub/infra/web/ingress.yaml
+++ b/hub/infra/web/ingress.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   name: ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
     namespace: default
 spec:
   ingressClassName: nginx
@@ -20,5 +20,12 @@ spec:
             backend:
               service:
                 name: web-landing
+                port:
+                  number: 80
+          - path: /jsv(/|$)(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: web-jsv
                 port:
                   number: 80
