remove tika lib & straight handle file

--- a/hub/dispatcher/src/main/resources/application-bbo.properties
+++ b/hub/dispatcher/src/main/resources/application-bbo.properties
@@ -3,4 +3,4 @@
 spring.rabbitmq.ssl.key-store=file:C:/dev/ANS/SAMU/HubSante/repository/SAMU-Hub-Sante/certs/client.p12
 spring.rabbitmq.ssl.trust-store=file:C:/dev/ANS/SAMU/HubSante/repository/SAMU-Hub-Sante/certs/truststore
 
-client.preferences.file=C:/dev/ANS/SAMU/HubSante/repository/SAMU-Hub-Sante/hub/dispatcher/src/main/jib/config/client.preferences.csv
+client.preferences.file=file:C:/dev/ANS/SAMU/HubSante/repository/SAMU-Hub-Sante/hub/dispatcher/src/main/jib/config/client.preferences.csv
