--- a/hub/dispatcher/src/main/resources/application.properties
+++ b/hub/dispatcher/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.rabbitmq.ssl.trust-store-password=trustStore
 spring.rabbitmq.ssl.key-store=file:/certs/client.p12
 spring.rabbitmq.ssl.trust-store=file:/certs/trustStore
 
-client.preferences.file=/config/client.preferences.csv
+client.preferences.file=file:/config/client.preferences.csv
