--- a/hub/infra/web/ingress.yaml
+++ b/hub/infra/web/ingress.yaml
@@ -3,19 +3,19 @@ kind: Ingress
 metadata:
   name: ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/rewrite-target: /$1$2
     namespace: default
 spec:
   ingressClassName: nginx
   tls:
-  - hosts:
-      - hub.esante.gouv.fr
-    secretName: landing-cert
+    - hosts:
+        - hub.esante.gouv.fr
+      secretName: landing-cert
   rules:
     - host: "hub.esante.gouv.fr"
       http:
         paths:
-          - path: /
+          - path: /(.*)
             pathType: Prefix
             backend:
               service:
