prepare test env

--- a/hub/dispatcher/src/test/resources/application-test.properties
+++ b/hub/dispatcher/src/test/resources/application-test.properties
@@ -1,3 +1,5 @@
 spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.ssl.enabled=false
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin
