--- a/hub/dispatcher/src/test/resources/config/rabbitmq.conf
+++ b/hub/dispatcher/src/test/resources/config/rabbitmq.conf
@@ -11,7 +11,5 @@ ssl_options.keyfile                   = /etc/rabbitmq-tls/tls.key
 ssl_options.cacertfile                = /etc/rabbitmq-tls/ca.crt
 ssl_options.verify                    = verify_peer
 ssl_options.fail_if_no_peer_cert      = true
-#auth_mechanisms.1                     = EXTERNAL
-#ssl_cert_login_from                   = common_name
-
-#load_definitions                      = /tmp/rabbitmq/config/definitions.json
+auth_mechanisms.1                     = EXTERNAL
+ssl_cert_login_from                   = common_name
