Github action debug

--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -15,6 +15,13 @@ jobs:
         run: |
           chmod +x gradlew
           ./gradlew jacocoTestReport
+          ls ${{ github.workspace }}
+          ls ${{ github.workspace }}/hub/
+          ls ${{ github.workspace }}/hub/dispatcher/
+          ls ${{ github.workspace }}/hub/dispatcher/build/
+          ls ${{ github.workspace }}/hub/dispatcher/build/reports/
+          ls ${{ github.workspace }}/hub/dispatcher/build/reports/jacoco/
+          ls ${{ github.workspace }}/hub/dispatcher/build/reports/jacoco/test/          
 
       - name: Add coverage to PR
         id: jacoco
