--- a/.github/workflows/dispatcher-tests.yml
+++ b/.github/workflows/dispatcher-tests.yml
@@ -21,6 +21,9 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: '11'
+      
+      - name: Go to dispatcher sub-project
+        run: cd hub/dispatcher
 
       - name: Grant execute permission for Gradlew
         run: chmod +x gradlew
