--- a/hub/infra/web/ingress.yaml
+++ b/hub/infra/web/ingress.yaml
@@ -4,6 +4,11 @@ metadata:
   name: ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$1$2
+    # Rewrite all URLs not ending with a segment containing . or ? with a trailing slash
+    # So basically we are rewriting all folder names with a trailing slash
+    # Ref.: https://stackoverflow.com/a/65941913
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      rewrite ^([^.?]*[^/])$ $1/ redirect;
     namespace: default
 spec:
   ingressClassName: nginx
@@ -27,5 +32,12 @@ spec:
             backend:
               service:
                 name: web-jsv
+                port:
+                  number: 80
+          - path: /specs(/|$)(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: web-specs
                 port:
                   number: 80
