--- a/models/csv_parser/hubsante.asyncapi.yaml
+++ b/models/csv_parser/hubsante.asyncapi.yaml
@@ -163,6 +163,8 @@ components:
           type: string
       required:
       - caseLocation
+      title: CreateCaseMessage
+      type: object
     Descriptor:
       additionalProperties: false
       properties:
