Deploying basic LRM UI

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,11 @@ models/node_modules
 # Cluster access configs
 kubeconfig.yml
 
-# Model Excel
+# Models
+# - Excel model
 models/csv_parser/model.xlsx
+# - Example Word tables styles
 models/csv_parser/docx-styles/
+# - JSON Schemas and examples in web/ projects
+web/**/schema.json
+web/**/example.json
