--- a/web/jsv/Dockerfile
+++ b/web/jsv/Dockerfile
@@ -4,18 +4,24 @@ FROM node:20 as build
 # Set working directory
 WORKDIR /app
 
-# Install Bower globally
-RUN npm install -g bower
-
 # Install Sass via gem
 RUN apt-get update && apt-get install -y build-essential && apt-get install -y ruby-dev
 RUN gem install sass
 
-# Copy the project files needed for install to the container
-COPY package.json package-lock.json bower.json ./
+# Install Bower globally
+RUN npm install -g bower
+
+# Install Grunt globally
+RUN npm install -g grunt-cli
+
+# Copy the npm project files needed for install to the container
+COPY package.json package-lock.json ./
 
 # Install dependencies via NPM
 RUN npm install
+
+# Copy the bower project file needed for install to the container
+COPY bower.json .
 
 # Install dependencies via Bower
 RUN bower install --allow-root
@@ -24,7 +30,6 @@ RUN bower install --allow-root
 COPY . .
 
 # Build project via Grunt
-RUN npm install -g grunt-cli
 RUN grunt prod
 
 # Use a lightweight web server as the base image
