--- a/hub/dispatcher/src/main/resources/application-local.properties
+++ b/hub/dispatcher/src/main/resources/application-local.properties
@@ -1,1 +1,4 @@
 spring.rabbitmq.host=localhost
+
+spring.rabbitmq.ssl.key-store-password=certPassword
+spring.rabbitmq.ssl.trust-store-password=trustStore
