--- a/hub/dispatcher/src/main/resources/application.properties
+++ b/hub/dispatcher/src/main/resources/application.properties
@@ -2,10 +2,10 @@ spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5671
 spring.rabbitmq.ssl.enabled=true
 
-spring.rabbitmq.ssl.key-store-password=certPassword
-spring.rabbitmq.ssl.trust-store-password=trustStore
+spring.rabbitmq.ssl.key-store-password=${DISPATCHER_KEYSTORE_PASSWORD}
+spring.rabbitmq.ssl.trust-store-password=${DISPATCHER_TRUSTSTORE_PASSWORD}
 
-spring.rabbitmq.ssl.key-store=file:/certs/client.p12
+spring.rabbitmq.ssl.key-store=file:/certs/dispatcher.p12
 spring.rabbitmq.ssl.trust-store=file:/certs/trustStore
 
 client.preferences.file=file:/config/client.preferences.csv
