--- a/hub/infra/dispatcher.yaml
+++ b/hub/infra/dispatcher.yaml
@@ -14,4 +14,30 @@ spec:
     spec:
       containers:
         - name: dispatcher
-          image: romainfd/dispatcher:latest
+          image: bou3108/dispatcher:latest
+          env:
+            - name: DISPATCHER_KEYSTORE_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: dispatcher-tls-passwords
+                  key: keystore-password
+            - name: DISPATCHER_TRUSTSTORE_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: dispatcher-tls-passwords
+                  key: truststore-password
+          # mount secret files as volumes (cf https://www.jeffgeerling.com/blog/2019/mounting-kubernetes-secret-single-file-inside-pod)
+          volumeMounts:
+            - mountPath: /certs/dispatcher.p12
+              subPath: dispatcher.p12
+              name: dispatcher-p12
+            - mountPath: /certs/trustStore
+              subPath: trustStore
+              name: trust-store
+      volumes:
+        - name: dispatcher-p12
+          secret:
+            secretName: dispatcher-p12
+        - name: trust-store
+          secret:
+            secretName: trust-store
