fix test action

--- a/.github/workflows/dispatcher-tests.yml
+++ b/.github/workflows/dispatcher-tests.yml
@@ -30,6 +30,8 @@ jobs:
         run: chmod +x gradlew
 
       - name: Build and run tests
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: ./gradlew test
 
       - name: Add coverage to PR
