get default TTL from Spring property

--- a/hub/dispatcher/src/main/resources/application.properties
+++ b/hub/dispatcher/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.rabbitmq.ssl.key-store=file:/certs/dispatcher.p12
 spring.rabbitmq.ssl.trust-store=file:/certs/trustStore
 
 client.preferences.file=file:/config/client.preferences.csv
+hubsante.default.message.ttl=86400
