--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,5 +30,5 @@ jobs:
       - name: Build and run tests
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          DOCKERHUB_TOKEN: ${{ secrets.DOCKER_KEY }}
+          DOCKERHUB_TOKEN: ${{ secrets. DOCKER_HUB_KEY }}
         run: ./gradlew jib --stacktrace
