--- a/hub/dispatcher/src/main/resources/application.properties
+++ b/hub/dispatcher/src/main/resources/application.properties
@@ -9,4 +9,7 @@ spring.rabbitmq.ssl.key-store=file:/certs/dispatcher.p12
 spring.rabbitmq.ssl.trust-store=file:/certs/trustStore
 
 client.preferences.file=file:/config/client.preferences.csv
+# hubsante.default.message.ttl needs to be syncd with definitions.json :
+# expressed in seconds for readability and use in code,
+# should match the message TTL applied to all client queues (which is in milliseconds)
 hubsante.default.message.ttl=86400
